@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Proc-Simple
-version:      1.20
+version:      1.21
 version_from: Simple.pm
 installdirs:  site
 requires:
